# viz_primitive

./: .gitignore  404.html  BRICKWORLD_VISION.md  CLAUDE.md  JUSTEMBED_VISION.md  README.md  ROADMAP.md  ROOMWORLD_VISION.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_laptop.py  test_scatter.py
.github/workflows/: ci.yml  publish-crates.yml  publish-pypi.yml
docs/: index.md  roadmap.md
docs/dr2d/: api.md  index.md  philosophy.md
docs/justviz/: index.md
dr2d/: index.html
dr2d-python/: Cargo.toml  pyproject.toml
dr2d-python/src/: lib.rs  windowed.rs
dr2d-rust/: Cargo.toml  LICENSE  PHILOSOPHY.md  README.md
dr2d-rust/dr2d/: Cargo.toml
dr2d-rust/dr2d-cli/: Cargo.toml
dr2d-rust/dr2d-cli/src/: main.rs  scene_loader.rs
dr2d-rust/dr2d/examples/: custom_shapes.rs  headless_export.rs  scatter_sdf.rs
dr2d-rust/dr2d/src/: headless.rs  input.rs  interaction.rs  lib.rs  text.rs  viewport.rs
dr2d-rust/dr2d/src/data/: coord_mapper.rs  mod.rs  parquet_loader.rs
dr2d-rust/dr2d/src/renderer/: gpu.rs  mod.rs  pipeline.rs  sdf_pipeline.rs  tessellation.rs  vertex.rs
dr2d-rust/dr2d/src/scene/: mod.rs  shape.rs  viewpoint.rs
dr2d/api/: index.html
dr2d/philosophy/: index.html
justviz/: LICENSE  README.md  index.html  pyproject.toml
justviz/src/justviz/: __init__.py  _input.py  _renderer.py  _window.py  axes.py
justviz/src/justviz/animation/: __init__.py
justviz/src/justviz/charts/: __init__.py  bar.py  clusters.py  distances.py  explore.py  graph.py  line.py  scatter.py  timeline.py
justviz/src/justviz/charts/.ipynb_checkpoints/: graph-checkpoint.py
justviz/src/justviz/jupyter/: __init__.py
justviz/src/justviz/navigation/: __init__.py
justviz/src/justviz/scenes/: __init__.py
justviz/src/justviz/storyboard/: __init__.py  story.py
justviz/src/justviz/streaming/: __init__.py
memory/: MEMORY.md  feedback_repo_org.md  project_viz_primitive.md  user_profile.md
notebooks/: 00_quickstart.ipynb  01_scatter.ipynb  02_bar.ipynb  03_clusters.ipynb  04_distances.ipynb  05_graph.ipynb  06_timeline.ipynb  07_explore.ipynb  08_story.ipynb  demo_charts.ipynb
notebooks/.ipynb_checkpoints/: demo_charts-checkpoint.ipynb
roadmap/: index.html
search/: search_index.json
