[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dr2d"
version = "0.1.0a2"
requires-python = ">=3.10"
description = "Python bindings for the dr2d rendering primitive"
dependencies = [
    "numpy>=1.24"
]

[tool.maturin]
features = ["pyo3/extension-module"]
