[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "justviz"
version = "0.1.0a3"
description = "Charts, scenes, storyboards, and animations powered by dr2d"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["visualization", "charts", "gpu", "scenes", "storyboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
    "dr2d",
]

[project.urls]
Homepage = "https://git.sekrad.org/viz_primitive/justviz/"
Repository = "https://github.com/sekarkrishna/viz_primitive"
Documentation = "https://git.sekrad.org/viz_primitive/justviz/"

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]
jupyter = ["ipywidgets>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
